src/test/deca/syntax/valid/provided/if.deca
{
if ( 2 > 5) {
   println("hello");
} else if ( 3 < 88 )  {
  println("bye");
} else if ( 1 == 1 ) {
  println("helloagain");
} else {
  println("farewell");
}
}