src/test/deca/syntax/invalid/test_synt33.deca
//Resultat:
//      Erreur syntaxique : ligne 2
{
if ( 3.2 < = = "hello"){
   println("this shouldn't be printed");
}
}
